kubernetes/yaml/ingress/ingress1-dep-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: nginx01
    spec:
      containers:
        - name: nginx01
          image: wangyanglinux/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  selector:
    name: nginx01
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
