kubernetes/yaml/ingress/ingress2-dep-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: nginx02
    spec:
      containers:
        - name: nginx02
          image: wangyanglinux/myapp:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    name: nginx02
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
