kubernetes/yaml/ingress/ingress3-dep-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-nginx3
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: nginx03
    spec:
      containers:
        - name: nginx03
          image: wangyanglinux/myapp:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: svc3
spec:
  selector: 
    name: nginx03
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
